@startuml
' Configuración de estilo similar a la imagen
skinparam linetype ortho
skinparam monochrome false
skinparam packageStyle rectangle
skinparam shadowing false

entity "PRESTATARIO" as prestatario {
  int : id_prestatario [PK]
  --
  string : nombre
  string : correo [UK]
}

entity "PRESTAMO" as prestamo {
  int : id_prestamo [PK]
  --
  string : numero_prestamo [UK]
  int : id_prestatario [FK]
  date : fecha_prestamo
  date : fecha_devencion_prevista
  string : estado
}

entity "EQUIPO" as equipo {
  int : id_equipo [PK]
  --
  string : codigo_equipo [UK]
  string : nombre
  string : categoria
}

entity "DETALLE_PRESTAMO" as detalle {
  int : id_prestamo [PK, FK]
  int : id_equipo [PK, FK]
}

' Relaciones con sus nombres de etiqueta
prestatario ||--o{ prestamo : "realiza"
prestamo ||--|{ detalle : "contiene"
equipo ||--o{ detalle : "incluye"

@enduml
